# unicorn

./: Cargo.toml  LICENSE
examples/: battery.rs  buttons.rs  cpu.rs  ram.rs
src/: error.rs  keyboard.rs  lib.rs
src/pimoroni/: mod.rs  unicorn.rs  unicornmini.rs
syspixel/: Cargo.toml  build_and_install.py
syspixel/debian/: service
syspixel/src/: cpu.rs  main.rs  pixel.rs  ram.rs
unicorn/: Cargo.toml
unicorn-examples/: Cargo.toml
unicorn-examples/src/: lib.rs
unicorn-examples/src/psutil/: cpu.rs  mod.rs  ram.rs
unicorn/examples/: battery.rs
unicorn/src/: keyboard.rs
unicorn/src/pimoroni/: mod.rs  unicorn.rs  unicornmini.rs
