[package]
name = "unicorn"
version = "0.1.3"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

[dependencies]
spidev = "0.4.0"
rand = "0.8.4"
libc = "0.2.79"
inotify = { version = "0.8.3", default-features = false, features = [] }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.16"
nix = "0.17.0"
rppal = "0.13.1"
rgb = "0.8"
log = "0.4.17"

[dev-dependencies]
color-eyre = "0.6.1"
env_logger = "0.9.0"
psutil = "3.2.1"
clap = { version = "3.2.7", features = ["derive"] }